<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/qty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addChocolate"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/mi"
        android:textColor="@color/black"
        app:backgroundTint="#A9A9A9"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="decrement"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginStart="16dp"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/black"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/pl"
        android:textColor="@color/black"
        app:backgroundTint="#A9A9A9"
        android:onClick="increment"
        app:layout_constraintStart_toEndOf="@+id/quantity_text_view"
        app:layout_constraintTop_toTopOf="@+id/button2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        android:text="@string/order"
        android:textColor="@color/black"
        app:backgroundTint="#A9A9A9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginStart="16dp"
        tools:ignore="UsingOnClickInXml" />


    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:shadowColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginStart="16dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/topping"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personName"
        android:layout_marginStart="16dp"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/addChocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/chocolate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whipped_cream_checkbox"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textCapWords"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>